--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 .vpc-shiki-copy-btn {
-  border-top-left-radius: 4px;
+  border-radius: 4px 0;
   padding: 4px 8px;
   position: absolute;
   font-size: 1em;
