--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css');
+
 .vpc-shiki {
   border-radius: 4px;
 }
@@ -13,6 +15,11 @@
   white-space: pre-wrap;
   background: transparent;
   border: none;
+}
+
+.vpc-shiki [class^=devicon-], .vpc-shiki [class*=" devicon-"] {
+  margin-right: 8px;
+  user-select: none;
 }
 
 .vpc-shiki-plain code {
